objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Status2__c</fullName>
        <label>Inventory Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <formula>if( Quantity_Available__c &lt;= 0 , &quot;Out of Stock&quot;,
if( Quantity_Available__c &gt; 0 &amp;&amp; Quantity_Available__c &lt;= 10, &quot;Low Stock&quot;,
if( Quantity_Available__c &gt; 10 &amp;&amp; Quantity_Available__c &lt;= 30, &quot;Sufficient Stock&quot;,
if( Quantity_Available__c &gt; 30 , &quot;Extra Stock&quot;, &quot;&quot; ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MFG_Site__c</fullName>
        <label>MFG Site</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Assigned__c</fullName>
        <label>Quantity Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <formula>Quantity_On_Hand__c - Quantity_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_On_Hand__c</fullName>
        <label>Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MFG_Site__c</columns>
        <columns>Inventory_Status__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Quantity_Assigned__c</columns>
        <columns>Quantity_Available__c</columns>
        <columns>Quantity_On_Hand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>